--- a/02.variable-task.yml
+++ b/02.variable-task.yml
@@ -15,7 +15,7 @@
 - name: variables from file
   hosts: localhost
   vars_files:
-  - variable.yml    
+  - 03.variable.yml    
   tasks:
   - name: varibles
     ansible.builtin.debug:
