--- a/04.variable-inventory.yml
+++ b/04.variable-inventory.yml
@@ -1,8 +1,6 @@
 - name: variables from inventory
   hosts: localhost
-  # vars_files:
-  # - 03.variable.yml    
   tasks:
   - name: varibles from inventory
     ansible.builtin.debug:
-      msg: name is {{NAME}}, course name is {{COURSE}}, organisation is {{ORGANISATION}}
+      msg: "name is {{NAME}} course name is {{COURSE}} organisation is {{ORGANISATION}}"
