--- a/07.loop.yml
+++ b/07.loop.yml
@@ -4,7 +4,7 @@
   tasks:
   - name: installing packages
     ansible.builtin.packages:
-      name: {{item}}
+      name: "{{item}}"
       state: present
     loop:
       - nginx
