--- a/robo-ansible/mongodb.yml
+++ b/robo-ansible/mongodb.yml
@@ -15,12 +15,14 @@
       name: mongod
       state: started
       enabled: yes
-    replace:
-        path: /etc/mongod.conf
-        regexp: '127.0.0.1'
-        replace: '0.0.0.0'
-  - name: retart mongod servie
-     ansible.builtin.service:
+  - name: allow remote conncections
+    ansible.builtin.replace:
+      path: /etc/mongod.conf
+      regexp: '127.0.0.1'
+      replace: '0.0.0.0'
+
+  - name: start and enable mongodb
+    ansible.builtin.service:
       name: mongod
       state: restarted
   
