--- a/robo-ansible/mongodb.yml
+++ b/robo-ansible/mongodb.yml
@@ -9,7 +9,7 @@
   - name: install mongodb-org
     ansible.builtin.package:
       name: mongodb-org
-      state: started
+      state: present
   - name: start and enable mongodb
     ansible.builtin.service:
       name: mongod
